# amock

./: README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test.py
